# engine

./: .gitignore  .gitmodules  CMakeLists.txt  compile.sh  main.cpp  readme.md  vulkan_test.cpp
.cache/clangd/index/: CADefines.hpp.01860B09E7AF50FC.idx  CAMetalDrawable.hpp.8ECD156167CD24D8.idx  CAMetalLayer.hpp.475A19495343BBCE.idx  CAPrivate.hpp.47653651219664C0.idx  Foundation.hpp.89C736C10A5A7A74.idx  MTL4Archive.hpp.6DDE132155A9393B.idx  MTL4ArgumentTable.hpp.1835ACB134CE747A.idx  MTL4BinaryFunction.hpp.0E68A88EEF32ACBB.idx  MTL4BinaryFunctionDescriptor.hpp.6554082C789377C6.idx  MTL4CommandAllocator.hpp.95B509CE0FFADB76.idx  MTL4CommandBuffer.hpp.5CDC09C386AFFF4D.idx  MTL4CommandEncoder.hpp.C6259F1FEBFB963E.idx  MTL4CommandQueue.hpp.9D96DBA346054420.idx  (+300 more)
cmake/: EngineShaders.cmake
core/: CMakeLists.txt
ecs/: CMakeLists.txt
graphics/: CMakeLists.txt
include/engine/: application.h  config.h  input_system.h
modules/: CMakeLists.txt
modules/controls/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/ecs/: CMakeLists.txt
modules/graphics/: CMakeLists.txt
modules/input/: CMakeLists.txt
modules/input_glfw/: CMakeLists.txt
modules/pathtracer/: CMakeLists.txt
modules/physics/: CMakeLists.txt
modules/physics_ecs/: CMakeLists.txt
modules/physics_env/: CMakeLists.txt
modules/scene/: CMakeLists.txt
notes/: README.md
notes/core/: architecture.md  goals.md  todo.md
notes/investigations/: 2026-07-01-codebase-overview.md  2026-07-01-graphics-refactor.md  2026-07-02-core-module-plan.md  2026-07-02-geometry-scaling.md  2026-07-02-rhi-interface-plan.md  2026-07-03-articulation-approach.md  2026-07-03-humanoid-rl-milestone-plan.md  2026-07-03-physics-baseline.md  2026-07-03-physics-plan.md  2026-07-03-physics-test-findings.md  2026-07-03-terrain-collision-deferred.md  2026-07-04-differentiable-reduced.md  2026-07-04-humanoid-rig-adoption.md  2026-07-04-reduced-coordinate-backend.md  2026-07-04-render-framework-plan.md  2026-07-05-antialiasing-msaa-fxaa.md  2026-07-05-graphics-config-system.md  2026-07-05-sky-atmosphere.md
physics/: CMakeLists.txt
physics_ecs/: CMakeLists.txt
resources/: brush_vert.spv  frag.spv  vert.spv
scene/: CMakeLists.txt
scripts/: compile_shaders.sh  get_slang.sh  readme.md
shaders/: CMakeLists.txt  compile.sh  mesh.slang  triangle.slang
src/: application.cpp  main.cpp
src/controls/: fly_controller.cpp
src/ecs/: world.cpp
src/graphics/: graphics.cpp  graphics.h  graphics_brush.cpp  graphics_custom.cpp  graphics_instance.cpp  graphics_layer.cpp  graphics_model.cpp  graphics_swapchain.cpp  graphics_texture.cpp  graphics_utils.cpp  input_system.cpp  model_loader.cpp
src/input_glfw/: glfw_input.cpp
src/pathtracer/: integrator.cpp  scene.cpp
src/physics/: physics.cpp
src/physics_ecs/: articulation.cpp  systems.cpp
src/physics_env/: diff_vec_env.cpp  env_factory.cpp  environment.cpp  vec_env.cpp
src/scene/: extract.cpp
src/shaders/: CMakeLists.txt  cluster.slang  compute_smoke.slang  engine_mesh.slang  fxaa.slang  mesh.slang  shadow.slang  sky.slang  tonemap.slang
src/tools/: get_slang.sh
tst/: CMakeLists.txt  ecs_test.cpp  gjk_epa_test.cpp  mesh_offscreen.cpp  physics_bench.cpp  physics_milestone.cpp  physics_test.cpp  physics_window.cpp  rhi_smoke.cpp  scene_offscreen.cpp  scheduler_test.cpp  test.cpp  thread_pool_test.cpp  triangle_offscreen.cpp  visual_window.cpp
tst/controls/unit/: fly_controller.cpp
tst/core/unit/: bounds.cpp  camera.cpp  geometry.cpp  geometry_catalog.cpp  image_io.cpp  obj_loader.cpp  thread_pool.cpp
tst/ecs/integration/: scheduler.cpp
tst/ecs/unit/: entities.cpp
tst/graphics/benchmark/: render_graph.cpp
tst/graphics/integration/: aa.cpp  cluster_binning.cpp  clustered_forward.cpp  fog.cpp  hdr_tonemap.cpp  mesh.cpp  multi_light.cpp  multiview_ring.cpp  scene.cpp  shadow_bias.cpp  shadow_map.cpp  sky.cpp  triangle.cpp
tst/graphics/path-tracer/integration/: behaviors.cpp  cornell.cpp  raster_vs_pathtraced.cpp
tst/graphics/path-tracer/unit/: intersection.cpp  sampling.cpp
tst/graphics/realtime/benchmark/: bindless_textures.cpp  frustum_cull.cpp  render_graph.cpp
tst/graphics/realtime/integration/: aa.cpp  app_data.cpp  backface_cull.cpp  bindless_textured.cpp  cluster_binning.cpp  clustered_forward.cpp  dynamic_resolution.cpp  fog.cpp  frustum_cull.cpp  hdr_tonemap.cpp  material_features.cpp  mesh.cpp  multi_light.cpp  multiview_ring.cpp  pipeline_variants.cpp  scene.cpp  shadow_bias.cpp  shadow_map.cpp  sky.cpp  two_sided_lighting.cpp
tst/graphics/realtime/unit/: compute_smoke.cpp  config.cpp
tst/graphics/realtime/visual/: atmosphere_scene.cpp  clustered_lights.cpp  grid.cpp  input_demo.cpp  shadow_scene.cpp
tst/graphics/unit/: barrier_transient.cpp  rhi_smoke.cpp
tst/graphics/visual/: atmosphere_scene.cpp  clustered_lights.cpp  demo_toggles.h  grid.cpp  input_demo.cpp  shadow_scene.cpp
tst/harness/: harness.cpp  harness.h  runner_main.cpp
tst/input/unit/: input_state.cpp
tst/physics/benchmark/: cuda_forward.cpp  diff.cpp  step.cpp
tst/physics/integration/: amp_humanoid.cpp  articulation_ecs.cpp  cuda_parity.cpp  diff_contact_stability.cpp  diff_environment.cpp  diff_validation.cpp  dynamics.cpp  humanoid_control.cpp  milestone.cpp  ragdoll.cpp  reduced.cpp  reduced_joints.cpp  rigidbody.cpp
tst/physics/unit/: collision.cpp  collision_filter.cpp  config.cpp  diff_articulated.cpp  diff_contact.cpp  diff_dual.cpp  diff_flat_model.cpp  diff_hybrid.cpp  diff_invariants.cpp  diff_jacobian.cpp  diff_semiimplicit.cpp  diff_zeroth_order.cpp  joints.cpp  kernels.cpp  manifolds.cpp  segments.cpp  so3.cpp  sphere_box.cpp
tst/physics/visual/: amp_humanoid.cpp  amp_policy.cpp  diff_humanoid.cpp  humanoid.cpp  policy_net.h  reduced_joints.cpp  rolling.cpp
tst/physics_env/benchmark/: cuda_vec_env.cpp  reduced_env.cpp  vec_env.cpp
tst/physics_env/integration/: amp_vecenv.cpp  backend_fidelity.cpp  diff_vec_env.cpp  env_factory.cpp  reduced_env.cpp  vec_env.cpp
tst/physics_env/unit/: environment.cpp
tst/shaders/: app_data_probe.slang
(+152 files in other folders)
